# Copyright (C) 2002 Guido Scholz <guido.scholz@bayernline.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

tiffdatadir = $(fsviewerdir)/tiff

tiffdata_DATA = FSViewer.tif \
	exec-link.tif \
	file-dot-a.tif \
	file-dot-aiff.tif \
	file-dot-au.tif \
	file-dot-avi.tif \
	file-dot-bz2.tif \
	file-dot-c.tif \
	file-dot-cc.tif \
	file-dot-class.tif \
	file-dot-conf.tif \
	file-dot-core.tif \
	file-dot-cpp.tif \
	file-dot-dat.tif \
	file-dot-deb.tif \
	file-dot-eps.tif \
	file-dot-f90.tif \
	file-dot-fig.tif \
	file-dot-for.tif \
	file-dot-gif.tif \
	file-dot-gz.tif \
	file-dot-h.tif \
	file-dot-html.tif \
	file-dot-jar.tif \
	file-dot-java.tif \
	file-dot-jpg.tif \
	file-dot-m.tif \
	file-dot-mov.tif \
	file-dot-mp3.tif \
	file-dot-mpg.tif \
	file-dot-o.tif \
	file-dot-pdf.tif \
	file-dot-pedro.tif \
	file-dot-pl.tif \
	file-dot-png.tif \
	file-dot-ps.tif \
	file-dot-py.tif \
	file-dot-rc.tif \
	file-dot-rpm.tif \
	file-dot-sh.tif \
	file-dot-shar.tif \
	file-dot-so.tif \
	file-dot-tar.tif \
	file-dot-tcl.tif \
	file-dot-tex.tif \
	file-dot-texi.tif \
	file-dot-tga.tif \
	file-dot-tif.tif \
	file-dot-txt.tif \
	file-dot-wav.tif \
	file-dot-xbm.tif \
	file-dot-xcf.tif \
	file-dot-xpm.tif \
	file-dot-zip.tif \
	file-executable.tif \
	file-generic-gnustep.tif \
	file-generic-text.tif \
	file-link.tif \
	file-makefile.tif \
	file-plain.tif \
	file-readme.tif \
	folder-link.tif \
	folder.tif \
	fullfolder.tif \
	generic-coding.tif \
	generic-conf.tif \
	generic-config.tif \
	generic-library.tif \
	generic-sound.tif \
	generic-text.tif \
	home.tif \
	mycomputer.tif \
	neighbour.tif

EXTRA_DIST = $(tiffdata_DATA)
