# Copyright (C) 2002 Guido Scholz <guido.scholz@bayernline.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

xpmdatadir = $(fsviewerdir)/xpm

xpmdata_DATA = FSViewer.xpm \
	FSViewer2.xpm \
	Folder.xpm \
	arrow.xpm \
	clk.xpm \
	date.xpm \
	exec-link.xpm \
	file-dot-a.xpm \
	file-dot-aiff.xpm \
	file-dot-au.xpm \
	file-dot-avi.xpm \
	file-dot-bz2.xpm \
	file-dot-c.xpm \
	file-dot-cc.xpm \
	file-dot-class.xpm \
	file-dot-conf.xpm \
	file-dot-core.xpm \
	file-dot-cpp.xpm \
	file-dot-dat.xpm \
	file-dot-deb.xpm \
	file-dot-eps.xpm \
	file-dot-f90.xpm \
	file-dot-fig.xpm \
	file-dot-for.xpm \
	file-dot-gif.xpm \
	file-dot-gz.xpm \
	file-dot-h.xpm \
	file-dot-html.xpm \
	file-dot-jar.xpm \
	file-dot-java.xpm \
	file-dot-jpg.xpm \
	file-dot-m.xpm \
	file-dot-mov.xpm \
	file-dot-mp3.xpm \
	file-dot-mpg.xpm \
	file-dot-o.xpm \
	file-dot-pdf.xpm \
	file-dot-pedro.xpm \
	file-dot-pl.xpm \
	file-dot-png.xpm \
	file-dot-ps.xpm \
	file-dot-py.xpm \
	file-dot-rc.xpm \
	file-dot-rpm.xpm \
	file-dot-sh.xpm \
	file-dot-shar.xpm \
	file-dot-so.xpm \
	file-dot-tar.xpm \
	file-dot-tcl.xpm \
	file-dot-tex.xpm \
	file-dot-texi.xpm \
	file-dot-tga.xpm \
	file-dot-txt.xpm \
	file-dot-wav.xpm \
	file-dot-xbm.xpm \
	file-dot-xcf.xpm \
	file-dot-xpm.xpm \
	file-dot-zip.xpm \
	file-executable.xpm \
	file-generic-gnustep.xpm \
	file-link.xpm \
	file-makefile.xpm \
	file-plain.xpm \
	file-readme.xpm \
	file_plain.xpm \
	folder-link.xpm \
	folder.xpm \
	full-folder.xpm \
	generic-coding.xpm \
	generic-conf.xpm \
	generic-library.xpm \
	generic-sound.xpm \
	generic-text.xpm \
	home.xpm \
	led.xpm \
	month.xpm \
	mycomputer.xpm \
	neighbour.xpm \
	penguin.xpm \
	weekday.xpm \
	wmanalog.xpm \
	wmdigital.xpm \
	wmtime.xpm \
	year.xpm
 
EXTRA_DIST = $(xpmdata_DATA)
